# cmd/server/wire_gen.go
@@ -49,10 +49,15 @@ func InitServer(ctx context.Context, dsn database.DSN, pdConf *pd.Config, name c
 	relationTypes := &server.RelationTypes{
 		Storage: storage,
 	}
+	relations := &server.Relations{
+		Storage: storage,
+	}
 	serverServer := &server.Server{
 		Objects:       objects,
 		ObjectTypes:   objectTypes,
 		RelationTypes: relationTypes,
+		Relations:     relations,
+		Cache:         cacheCache,
 	}
 	return serverServer, nil
 }
