# pkg/server/server.go
@@ -18,6 +18,7 @@ import (
 
 	"github.com/grpc-ecosystem/grpc-gateway/runtime"
 	v1 "github.com/zhihu/cmdb/pkg/api/v1"
+	"github.com/zhihu/cmdb/pkg/storage/cache"
 	"google.golang.org/grpc"
 )
 
@@ -25,13 +26,17 @@ type Server struct {
 	Objects       *Objects
 	ObjectTypes   *ObjectTypes
 	RelationTypes *RelationTypes
+	Relations     *Relations
+	Cache         *cache.Cache
 }
 
 func (s *Server) Register(server *grpc.Server, mux *runtime.ServeMux) {
 	v1.RegisterObjectsServer(server, s.Objects)
 	v1.RegisterObjectTypesServer(server, s.ObjectTypes)
 	v1.RegisterRelationTypesServer(server, s.RelationTypes)
+	v1.RegisterRelationsServer(server, s.Relations)
 	_ = v1.RegisterObjectsHandlerServer(context.Background(), mux, s.Objects)
 	_ = v1.RegisterObjectTypesHandlerServer(context.Background(), mux, s.ObjectTypes)
 	_ = v1.RegisterRelationTypesHandlerServer(context.Background(), mux, s.RelationTypes)
+	_ = v1.RegisterRelationsHandlerServer(context.Background(), mux, s.Relations)
 }
