# pkg/server/type.go
@@ -15,7 +15,6 @@ package server
 
 import (
 	"context"
-	"strings"
 
 	v1 "github.com/zhihu/cmdb/pkg/api/v1"
 	"github.com/zhihu/cmdb/pkg/storage"
@@ -35,7 +34,7 @@ func (o *ObjectTypes) Delete(ctx context.Context, request *v1.GetObjectTypeReque
 }
 
 func (o *ObjectTypes) List(ctx context.Context, request *v1.ListObjectTypesRequest) (*v1.ListObjectTypesResponse, error) {
-	types, err := o.Storage.ListObjectTypes(ctx, request)
+	types, err := o.Storage.ListObjectTypes(ctx, request.Consistent, request.ShowDeleted)
 	if err != nil {
 		return nil, err
 	}
@@ -51,10 +50,11 @@ func (o *ObjectTypes) Create(ctx context.Context, objectType *v1.ObjectType) (*v
 	return o.Storage.CreateObjectType(ctx, objectType)
 }
 
-func (o *ObjectTypes) Update(ctx context.Context, req *v1.ObjectTypeUpdateRequest) (*v1.ObjectType, error) {
-	for i, path := range req.UpdateMask.Paths {
-		req.UpdateMask.Paths[i] = strings.ToLower(path)
-	}
+func (o *ObjectTypes) Update(ctx context.Context, req *v1.UpdateObjectTypeRequest) (*v1.ObjectType, error) {
 	v1.CheckObjectType(req.Type)
-	return o.Storage.UpdateObjectType(ctx, req.UpdateMask.Paths, req.Type)
+	var paths []string
+	if req.UpdateMask != nil {
+		paths = req.UpdateMask.Paths
+	}
+	return o.Storage.UpdateObjectType(ctx, paths, req.Type)
 }
